Updated the background to a faux background so that it loads correctly on mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,10 +7,24 @@
 body {
     text-align: center;
 
-	background: url('../images/background.jpg') center center fixed;
     background-color: #333;
-    background-size: cover;
-    background-repeat: no-repeat;
 
 	transition: all 0.4s 0.5s;
+}
+
+/* Fake the background because mobile is pain in the ass */
+html::before {
+  content: ' ';
+  display: block;
+  background-image: url('../images/background.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  z-index: -10;
 }
